test: users address delete method